--- a/index.html
+++ b/index.html
@@ -3,8 +3,46 @@
 <head>
   <meta charset="utf-8">
   <title>icons</title>
+  <link rel="stylesheet" href="/css/modules.css">
 </head>
 <body>
 
 </body>
 </html>
+<h1>Dinosours</h1>
+<div>
+  <ol class="list-group">
+    <li>
+      <i class="icon i-64">
+        <img src="images/ankylosaurus.svg" alt="">
+      </i>
+      <span class="icon-label">Ankylosaurus</span>
+      <div>
+        <ol class="list-group">
+          <li>
+            <i class="icon i-64">
+              <img src="images/ankylosaurus.svg" alt="">
+            </i>
+            <span class="icon-label">Hadrosaur</span>
+            <div>
+              <ol class="list-group">
+                <li>
+                  <i class="icon i-64">
+                    <img src="images/ankylosaurus.svg" alt="">
+                  </i>
+                  <span class="icon-label">Stegosauru</span>
+                  <div>
+                    <ol class="list-group">
+                      <li>
+                        <i class="icon i-64">
+                          <img src="images/ankylosaurus.svg" alt="">
+                        </i>
+                        <span class="icon-label">triceratops</span>
+                </li>
+              </ol>
+            </div>
+            </body>
+            </html>
+
+
+triceratops
