--- a/index.html
+++ b/index.html
@@ -3,46 +3,39 @@
 <head>
   <meta charset="utf-8">
   <title>icons</title>
-  <link rel="stylesheet" href="/css/modules.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="/css/modules.css" rel="stylesheet">
 </head>
 <body>
 
+  <h1>Dinosours</h1>
+  <div>
+    <ol class="list-group">
+      <li>
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Ankylosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Hadrosaur</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Stegosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64">
+          <img src="images/ankylosaurus.svg" alt="">
+        </i>
+        <span class="icon-label">Triceratops</span>
+      </li>
+    </ol>
+  </div>
 </body>
 </html>
-<h1>Dinosours</h1>
-<div>
-  <ol class="list-group">
-    <li>
-      <i class="icon i-64">
-        <img src="images/ankylosaurus.svg" alt="">
-      </i>
-      <span class="icon-label">Ankylosaurus</span>
-      <div>
-        <ol class="list-group">
-          <li>
-            <i class="icon i-64">
-              <img src="images/ankylosaurus.svg" alt="">
-            </i>
-            <span class="icon-label">Hadrosaur</span>
-            <div>
-              <ol class="list-group">
-                <li>
-                  <i class="icon i-64">
-                    <img src="images/ankylosaurus.svg" alt="">
-                  </i>
-                  <span class="icon-label">Stegosauru</span>
-                  <div>
-                    <ol class="list-group">
-                      <li>
-                        <i class="icon i-64">
-                          <img src="images/ankylosaurus.svg" alt="">
-                        </i>
-                        <span class="icon-label">triceratops</span>
-                </li>
-              </ol>
-            </div>
-            </body>
-            </html>
-
-
-triceratops
